# bitcoind-observer

./: Cargo.toml  README.md  shell.nix
ebpf-programs/: mempool_changes.c  p2p-in-and-outbound.c  p2p_in_and_outbound.c  sync_locks.c  utxo_set_cache_changes.c  utxo_set_cache_flushes.c  validation_block_connected.c
grafana-dashboards/: block-validation.json  home.json  p2p-traffic.json
src/: main.rs  metrics.rs  metricserver.rs  types.rs
