[package]
name = "bitcoind-observer"
version = "0.1.0"
authors = ["0xb10c <0xb10c@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcc = "0.0.31"
prometheus = "0.12.0"
lazy_static = "1.4.0"

log = "0.4.14"
simple_logger = "1.9.0"